# stitching

./: README.md  pyproject.toml
examples/: stitch_tiles.py
play/: debug_assemble.py
stitch/: __init__.py  connect.py  generate.py  temp_register.py
stitch/registration/: register.py  test_register.py
stitch/stitch/: __init__.py  assemble.py  converted_stream.py  graph.py  raw_stream.py  resource_manager.py  tile.py  utils.py
stitching/: connect.py  generate.py  register.py
stitching/registration/: register.py
tests/: test_assemble.py  test_graph.py  test_registration.py
