[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stitch"
version = "0.1"
description = "stitching of multi-fov microscopy datasets"

authors = [
    { name = "Alex Hillsley", email = "alexander.hillsley@czbiohub.org" },
]
dependencies = [
    "numpy",
    "scipy",
    "dask[array]",
    "zarr",
    "tqdm",
    "pyyaml",
    "iohub",
    "scikit-image",  # for CLAHE preprocessing
    "dexp",  # for registration
    "joblib",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x",  # for GPU acceleration (adjust cuda version as needed)
]

# Hatch config
[tool.hatch.build.targets.wheel]
packages = ["stitch"]