[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stitch"
version = "0.1"
description = "stitching of multi-fov microscopy datasets"
requires-python = ">=3.12,<3.13"

authors = [
    { name = "Alex Hillsley", email = "alexander.hillsley@czbiohub.org" },
]
dependencies = [
    "numpy",
    "scipy",
    "dask[array]",
    "zarr",
    "tqdm",
    "pyyaml",
    "iohub==0.3.0a6",
    "scikit-image",  # for CLAHE preprocessing
    "dexp",  # for registration
    "joblib",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x",
]

# Hatch config
[tool.hatch.build.targets.wheel]
packages = ["stitch"]